# RMC-Code-21-22

./: .clang-format  .cmake-format.json  .gitignore  .gitmodules  README.md
.github/workflows/: update.yml
C++/: Doxyfile  README.md
C++/PowerDistributionPanel/: CMakeLists.txt
C++/PowerDistributionPanel/include/: PowerDistributionPanel.hpp
C++/PowerDistributionPanel/src/: PowerDistributionPanel.cpp  reader.cpp
C++/camera/: CMakeLists.txt
C++/camera/source/: camera.cpp
C++/positionTrackingSansGraphics/: CMakeLists.txt
C++/positionTrackingSansGraphics/src/: main.cpp
C++/positionalTracking/cpp/: CMakeLists.txt
C++/positionalTracking/cpp/include/: GLViewer.hpp  ZEDModel.hpp
C++/positionalTracking/cpp/src/: GLViewer.cpp  main.cpp
C++/positionalTracking/csharp/: CMakeLists.txt
C++/robotcontrollerclient/: CMakeLists.txt
C++/robotcontrollerclient/include/: BoxFactory.hpp  ButtonFactory.hpp  InfoFrame.hpp  InfoItem.hpp  RemoteRobot.hpp  TalonInfoFrame.hpp  VictorInfoFrame.hpp  WindowFactory.hpp
C++/robotcontrollerclient/src/: BoxFactory.cpp  ButtonFactory.cpp  InfoFrame.cpp  InfoItem.cpp  RemoteRobot.cpp  TalonInfoFrame.cpp  VictorInfoFrame.cpp  WindowFactory.cpp  control.cpp
C++/robotcontrollerclient2/: CMakeLists.txt
C++/robotcontrollerclient2/include/: InfoFrame.hpp  InfoItem.hpp
C++/robotcontrollerclient2/src/: InfoFrame.cpp  InfoItem.cpp  control.cpp
C++/talon/: CMakeLists.txt  talon.cpp
C++/update/robotcontrollerclient/: CMakeLists.txt
C++/update/robotcontrollerclient/include/: BinaryMessage.hpp
C++/zed-aruco-master/: CMakeLists.txt
C++/zed-aruco-master/mono/: CMakeLists.txt
C++/zed-aruco-master/mono/src/: main.cpp
C++/zed-aruco-master/multi-camera/: CMakeLists.txt
C++/zed-aruco-master/multi-camera/include/: GLViewer.hpp
C++/zed-aruco-master/multi-camera/src/: GLViewer.cpp  aruco.cpp  main.cpp
C++/zed-mono-SansGraphics/src/: main.cpp
ROS2/: Doxyfile  README.md
ROS2/docs/: Example.cpp  MainPage.cpp
ROS2/skinny/: run.sh
ROS2/skinny/launch/: launch.py  launch_talon.py
ROS2/skinny/src/autonomy/: CMakeLists.txt
ROS2/skinny/src/communication/: CMakeLists.txt
ROS2/skinny/src/excavation/: package.xml  setup.py
ROS2/skinny/src/excavation/excavation/: excavation_node.py
ROS2/skinny/src/linear/: CMakeLists.txt  package.xml
ROS2/skinny/src/logic/: CMakeLists.txt
ROS2/skinny/src/messages/: CMakeLists.txt
ROS2/skinny/src/neo/: CMakeLists.txt  package.xml
ROS2/skinny/src/neo/src/: neo_node.cpp
ROS2/skinny/src/power_distribution_panel/: CMakeLists.txt  package.xml
ROS2/skinny/src/talon/: CMakeLists.txt
ROS2/skinny/src/zed_tracking/: CMakeLists.txt
ROS2/spinner/: run.sh
ROS2/spinner/launch/: NewLaunch.py  launch.py  launch_excav.py  launch_logic.py  launch_neo.py  launch_skinny.py  launch_talon.py  launch_test.py
ROS2/spinner/src/communication2/: CMakeLists.txt  package.xml
ROS2/spinner/src/falcon/: CMakeLists.txt  package.xml
ROS2/spinner/src/falcon/src/: falcon_node.cpp
(+120 files in other folders)
