<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>excavation</name>
  <version>0.0.0</version>
  <description>Python package controlling ODrive motors for excavation</description>
  <maintainer email="andrewburroughs17@gmail.com">Andrew Burroughs</maintainer>
  <license></license>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>odrive</exec_depend>
  <exec_depend>fibre</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
