<?xml version="1.0"?>
<package format="3">
  <name>falcon</name>
  <version>1.0.0</version>
  <description>The falcon package</description>
  <maintainer email="andrewburroughs17@gmail.com">Andrew Burroughs</maintainer>
  <author>Andrew Burroughs</author>
  <license>none</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>messages</depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
  <build_type>ament_cmake</build_type>
  </export>
</package>
